# adwaita-qt-decoration

./: CMakeLists.txt  README.md
src/headerbar/: CMakeLists.txt  headerbar.cpp  headerbar.h
src/style/: CMakeLists.txt  adwaita_decoration_style.cpp  adwaita_decoration_style.h  decoration_style.h  helper.h
src/wayland/: CMakeLists.txt  adwaita.json  adwaita_decoration.cpp  adwaita_decoration.h  main.cpp
test/: CMakeLists.txt  main.cpp
